<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gar_awgarrett.seeker.SignInActivity">

    <EditText
        android:id="@+id/etSIUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_text_username"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="126dp" />

    <EditText
        android:id="@+id/etSIPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_text_password"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="202dp" />

    <Button
        android:id="@+id/bSISignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_name_sign_in"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="278dp" />

    <Button
        android:id="@+id/bSIBack"
        android:layout_width="83dp"
        android:layout_height="47dp"
        android:text="@string/go_back"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="7dp" />
</android.support.constraint.ConstraintLayout>
