<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bNBCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/button_camera_page_description"
        android:icon="@android:drawable/ic_menu_camera" />

    <item
        android:id="@+id/bNBMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/bNBCamera"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/button_map_page_description"
        android:icon="@android:drawable/ic_dialog_map" />

    <item
        android:id="@+id/bNBQuests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/bNBMap"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/button_quest_page_description"
        android:icon="@android:drawable/ic_menu_sort_by_size" />
</menu>