<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="40dp"
    android:layout_marginTop="60dp"
    android:layout_marginBottom="60dp"
    android:theme="@style/AppTheme"
    android:background="@drawable/layout_floating_activity"
    tools:context="com.example.gar_awgarrett.seeker.CreateQuest">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:layout_marginTop="10dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/create_quest"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/newLocName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/newLocLat"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:hint="@string/edit_text_quest_name"
        android:inputType="text"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="126dp" />

    <EditText
        android:id="@+id/newLocLat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/newLocLong"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:ems="10"
        android:hint="@string/edit_text_latitude"
        android:inputType=""
        android:textAlignment="center"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="202dp" />

    <EditText
        android:id="@+id/newLocLong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:ems="10"
        android:hint="@string/edit_text_longitude"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="278dp" />

    <Button
        android:id="@+id/button2"
        android:background="@drawable/button_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newLocLong"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/create" />


</RelativeLayout>
