<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add_quest"
        android:icon="@drawable/ic_add_quest_black_24dp"
        android:title="@string/button_name_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_location"
        android:icon="@drawable/ic_add_location_black_24dp"
        android:title="@string/button_name_add"
        app:showAsAction="ifRoom" />

    <!--<item
        android:id="@+id/action_account"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/button_name_settings_account" />
    <item
        android:id="@+id/action_settings_who_can"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/button_name_settings_who_can"
        app:showAsAction="never" />-->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/button_name_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/quest_settings"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/button_name_settings"
        app:showAsAction="never" />

    <!-- Settings, should always be in the overflow -->
</menu>