<?xml version="1.0" encoding="utf-8"?>

<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gar_awgarrett.seeker.WelcomeActivity"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/seeker_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/image_seeker_description"
        android:src="@drawable/seekerlogo" />

    <Button
        android:id="@+id/bWSignUp"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="80%"
        app:layout_marginTopPercent="20%"
        app:layout_marginBottomPercent="2.5%"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_main"
        android:backgroundTint="@color/primaryLightColor"
        android:layout_below="@id/seeker_logo"
        android:text="@string/button_name_sign_up"
        android:textColor="@color/primaryDarkColorText"
        android:textSize="22sp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"/>


    <Button
        android:id="@+id/bWSignIn"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="80%"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_sign_in"
        android:layout_below="@id/bWSignUp"
        android:text="@string/button_name_sign_in"
        android:textColor="@color/primaryLightColor"
        android:textSize="22sp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
</android.support.percent.PercentRelativeLayout>
