<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gar_awgarrett.seeker.SignUpActivity"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/seeker_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/seekerlogo" />

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/seeker_text"
        android:layout_above="@id/bSUSignUp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/etSUName"
            android:backgroundTint="@color/primaryLightColor"
            app:layout_heightPercent="30%"
            app:layout_widthPercent="80%"
            android:layout_centerHorizontal="true"
            android:ems="30"
            android:hint="@string/edit_text_name"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/etSUEmail"
            android:backgroundTint="@color/primaryLightColor"
            app:layout_heightPercent="30%"
            app:layout_widthPercent="80%"
            android:layout_below="@+id/etSUName"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:hint="@string/edit_text_email"
            android:inputType="textEmailAddress" />


        <EditText
            android:id="@+id/etSUPassword"
            android:backgroundTint="@color/primaryLightColor"
            app:layout_heightPercent="30%"
            app:layout_widthPercent="80%"
            android:layout_below="@id/etSUEmail"
            android:layout_alignStart="@+id/etSUEmail"
            android:ems="10"
            android:hint="@string/edit_text_password"
            android:inputType="textPassword" />
    </android.support.percent.PercentRelativeLayout>


    <Button
        android:id="@+id/bSUSignUp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="180dp"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_main"
        android:backgroundTint="@color/primaryLightColor"
        android:text="@string/button_name_sign_up"
        android:textColor="@color/primaryDarkColorText"
        android:textSize="22sp" />

    <!--<Button
        android:id="@+id/bSUBack"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/button_main"
        android:text="@string/go_back"
        android:textColor="@android:color/white"
        android:textSize="15sp" /> -->
    <ImageButton
        android:id="@+id/bSUBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="11dp"
        android:background="@android:color/transparent"
        app:srcCompat="@android:drawable/ic_menu_revert"
        tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bSUSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:padding="15dp"
        android:text="@string/existing_account" />
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />


</RelativeLayout>