<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:backgroundTint="@color/colorPrimaryDark"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:scrollbarStyle="insideInset">

    </ScrollView>

    <ImageButton
        android:id="@+id/bNBMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/CameraButton"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_map_page_description"
        android:src="@android:drawable/ic_dialog_map"
        android:tint="@android:color/holo_green_light" />

    <ImageButton
        android:id="@+id/CameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_camera_page_description"
        android:src="@android:drawable/ic_menu_camera"
        android:tint="@android:color/holo_green_light" />

    <ImageButton
        android:id="@+id/bNBList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/bNBMap"
        android:layout_marginEnd="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_quest_page_description"
        android:src="@android:drawable/ic_menu_sort_by_size"
        android:tint="@android:color/holo_green_light" />

    <ListView
        android:id="@+id/locationsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/my_toolbar"
        android:divider="@color/colorPrimary"
        android:dividerHeight="1dp"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false"
        android:scrollbars="vertical">

    </ListView>

    <!--<Button
        android:id="@+id/bQMyQuests"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bQFind"
        android:layout_alignStart="@+id/bQFind"
        android:layout_marginBottom="35dp"
        android:background="@drawable/main_button"
        android:padding="10dp"
        android:text="@string/saved_quests"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bQFind"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/main_button"
        android:padding="10dp"
        android:text="@string/find_quest"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bQCreate"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/bQFind"
        android:layout_below="@+id/bQFind"
        android:layout_marginTop="35dp"
        android:background="@drawable/main_button"
        android:padding="10dp"
        android:text="@string/create_quest"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        android:textStyle="bold" />-->
</RelativeLayout>